--- a/index2.html
+++ b/index2.html
@@ -153,6 +153,7 @@
 			});
 
 			var options = {
+				text_style:	params.style || 'fuzzy',
 				text_align:	params.align || 'right',
 				bluetooth:	params.bluetooth === 'on',
 				weather:	params.weather
