--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 
 	<div class="container">
 		<header>
-			<h3>Fuzzy.Text.Shake</h3>
+			<h3>Ultimate.Text.Watch</h3>
 		</header>
 		
 		<form id="config" role="form" class="input-lg">
