--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,8 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Fuzzy.Text.Shake</title>
-	<meta name="description" content="configuration page for Fuzzy.Text.Shake, a Pebble watchface">
+	<title>Ultimate.Text.Watch</title>
+	<meta name="description" content="configuration page for Ultimate.Text.Watch, a Pebble watchface">
 	<meta name="author" content="Ben Nguyen">
 
 	<!-- Mobile Specific Metas
