--- a/index.html
+++ b/index.html
@@ -119,9 +119,25 @@
 						Every hour
 					</label>
 				</div>
-
 			</fieldset>
 			<br />
+			<fieldset>
+				<legend>Temperature unit:</legend>
+				<div class="radio">
+					<label>
+						<input type="radio" name="temp_unit" value="1" />
+						° Celsius
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="temp_unit" value="0" />
+						° Fahrenheit
+					</label>
+				</div>
+			</fieldset>
+			<br />
+
 			<fieldset>
 				<legend>Confirm:</legend>
 				<!--
