--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<legend>Temperature unit:</legend>
 				<div class="radio">
 					<label>
-						<input type="radio" name="temp_unit" value="1" />
+						<input type="radio" name="temp_unit" value="1" checked />
 						° Celsius
 					</label>
 				</div>
